--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
     background-color: green;
-    color: white;
+    color: black;
 }
